# sparse-coding-to-sae

./: CLAUDE.md  README.md  pyproject.toml
docs/: methodology.md
notebooks/: 01_whitening.ipynb  02_learning.ipynb  03_tuning_analysis.ipynb  04_sae_bridge.ipynb
src/sparse_coding/: __init__.py  analysis.py  data_loading.py  dictionary.py  gabor.py  inference.py  sae.py  whitening.py
tests/: test_dictionary.py  test_gabor.py  test_inference.py  test_whitening.py
