[project]
name = "sparse-coding-to-sae"
version = "0.1.0"
description = "Olshausen & Field (1996) sparse coding from scratch, quantitative V1 receptive-field analysis, and an amortized-vs-iterative SAE bridge."
readme = "README.md"
requires-python = "==3.11.*"
license = { file = "LICENSE" }
authors = [{ name = "Kaitlin Moore" }]

dependencies = [
    "numpy>=1.26",        # arrays, FFT for the whitening filter
    "scipy>=1.11",        # optimize.least_squares for Gabor fits
    "matplotlib>=3.8",    # filter grids, spectra, nx-ny scatter
    "scikit-learn>=1.4",  # LASSO — solver VALIDATION only, never in the owned path
    "torch>=2.2",         # SAE (Stage 5)
    "requests>=2.31",     # van Hateren fetch
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "jupyterlab>=4.0", "ipykernel>=6.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparse_coding"]

# CPU-only torch: the SAE is a linear encoder over 256-dim patches. The default
# PyPI wheel pulls ~2.5 GB of CUDA dependencies on Linux for no benefit here.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
